--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "@shopify/flash-list": "1.7.3",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "expo": "~52.0.31",
@@ -48,6 +49,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-exit-app": "^2.0.0",
+    "react-native-fast-image": "^8.6.3",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.16.1",
