--- a/eas.json
+++ b/eas.json
@@ -1,31 +1,37 @@
 {
-  "cli": {
-    "version": ">= 14.5.0",
-    "appVersionSource": "remote"
-  },
-  "build": {
-    "development": {
-      "developmentClient": true,
-      "distribution": "internal"
+    "cli": {
+        "version": ">= 14.5.0",
+        "appVersionSource": "remote"
     },
-    "production": {
-    "android": {
-      "buildType": "app-bundle",
-      "gradleCommand": ":app:bundleRelease",
-      "env": {
-        "EXPO_USE_HERMES": "1",
-        "EAS_SKIP_AUTO_FINGERPRINT": "1"
-      }
-    }
-},
-    "preview": {
-      "distribution": "internal"
+    "build": {
+        "development": {
+            "developmentClient": true,
+            "distribution": "internal"
+        },
+        "preview": {
+            "distribution": "internal",
+            "android": {
+                "buildType": "app-bundle",
+                "gradleCommand": ":app:bundleRelease",
+                "env": {
+                    "EXPO_USE_HERMES": "1",
+                    "EAS_SKIP_AUTO_FINGERPRINT": "1"
+                }
+            }
+        },
+        "production": {
+            "autoIncrement": true,
+            "android": {
+                "buildType": "app-bundle",
+                "gradleCommand": ":app:bundleRelease",
+                "env": {
+                    "EXPO_USE_HERMES": "1",
+                    "EAS_SKIP_AUTO_FINGERPRINT": "1"
+                }
+            }
+        }
     },
-    "production": {
-      "autoIncrement": true
+    "submit": {
+        "production": {}
     }
-  },
-  "submit": {
-    "production": {}
-  }
 }
