--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
     "expo": {
         "name": "Draz",
         "slug": "draz",
-        "version": "1.1.0",
+        "version": "1.3.0",
         "orientation": "portrait",
         "icon": "./assets/images/draz.png",
         "userInterfaceStyle": "automatic",
@@ -19,7 +19,6 @@
             "permissions": [
                 "android.permission.READ_EXTERNAL_STORAGE",
                 "android.permission.WRITE_EXTERNAL_STORAGE",
-                "android.permission.CAMERA",
                 "android.permission.INTERNET"
             ],
             "package": "com.zytech.draz"
@@ -35,7 +34,7 @@
             [
                 "expo-splash-screen",
                 {
-                    "image": "./assets/images/zytech.png",
+                    "image": "./assets/images/draz.png",
                     "resizeMode": "cover",
                     "backgroundColor": "#161920"
                 }
