--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "zytech",
+    "name": "draz",
     "main": "expo-router/entry",
-    "version": "2.0.0",
+    "version": "1.3.0",
     "scripts": {
         "start": "expo start",
         "dev": "NODE_ENV=development npx expo start",
