--- a/package.json
+++ b/package.json
@@ -1,68 +1,70 @@
 {
-    "name": "draz",
-    "main": "expo-router/entry",
-    "version": "1.3.6",
-    "scripts": {
-        "start": "expo start",
-        "dev": "NODE_ENV=development npx expo start",
-        "reset-project": "node ./scripts/reset-project.js",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start --web",
-        "test": "jest --watchAll",
-        "lint": "expo lint"
-    },
-    "jest": {
-        "preset": "jest-expo"
-    },
-    "dependencies": {
-        "@expo/vector-icons": "^14.0.2",
-        "@react-native-async-storage/async-storage": "1.23.1",
-        "@react-navigation/bottom-tabs": "^7.2.0",
-        "@react-navigation/native": "^7.0.14",
-        "@react-navigation/stack": "^7.1.1",
-        "@shopify/flash-list": "1.7.3",
-        "axios": "^1.7.9",
-        "dotenv": "^16.4.7",
-        "expo": "~52.0.46",
-        "expo-asset": "~11.0.3",
-        "expo-blur": "~14.0.3",
-        "expo-constants": "~17.0.4",
-        "expo-document-picker": "~13.0.3",
-        "expo-env": "^1.1.1",
-        "expo-file-system": "~18.0.8",
-        "expo-font": "~13.0.3",
-        "expo-haptics": "~14.0.1",
-        "expo-media-library": "~17.0.6",
-        "expo-router": "~4.0.21",
-        "expo-sharing": "~13.0.1",
-        "expo-splash-screen": "~0.29.24",
-        "expo-sqlite": "~15.1.4",
-        "expo-status-bar": "~2.0.1",
-        "expo-updates": "~0.27.4",
-        "nativewind": "^2.0.11",
-        "react": "18.3.1",
-        "react-dom": "18.3.1",
-        "react-native": "0.76.9",
-        "react-native-exit-app": "^2.0.0",
-        "react-native-paper": "^5.14.5",
-        "react-native-reanimated": "~3.16.1",
-        "react-native-safe-area-context": "4.12.0",
-        "react-native-screens": "~4.4.0",
-        "react-native-vector-icons": "^10.2.0"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.26.0",
-        "@types/jest": "^29.5.12",
-        "@types/react": "~18.3.12",
-        "@types/react-native-vector-icons": "^6.4.18",
-        "@types/react-test-renderer": "^18.3.0",
-        "jest": "^29.2.1",
-        "jest-expo": "~52.0.6",
-        "react-test-renderer": "18.3.1",
-        "tailwindcss": "^3.3.2",
-        "tsx": "^4.19.2",
-        "typescript": "^5.3.3"
-    },
-    "private": true
+  "name": "draz",
+  "main": "expo-router/entry",
+  "version": "1.5.0",
+  "scripts": {
+    "start": "expo start",
+    "dev": "NODE_ENV=development npx expo start",
+    "reset-project": "node ./scripts/reset-project.js",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "test": "jest --watchAll",
+    "lint": "expo lint"
+  },
+  "jest": {
+    "preset": "jest-expo"
+  },
+  "dependencies": {
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
+    "@shopify/flash-list": "^2.0.2",
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
+    "expo": "~52.0.46",
+    "expo-asset": "~11.0.3",
+    "expo-blur": "~14.0.3",
+    "expo-constants": "~17.0.4",
+    "expo-document-picker": "~13.0.3",
+    "expo-env": "^1.1.1",
+    "expo-file-system": "~18.0.8",
+    "expo-font": "~13.0.3",
+    "expo-haptics": "~14.0.1",
+    "expo-media-library": "~17.0.6",
+    "expo-router": "~4.0.21",
+    "expo-sharing": "~13.0.1",
+    "expo-splash-screen": "~0.29.24",
+    "expo-sqlite": "~15.1.4",
+    "expo-status-bar": "~2.0.1",
+    "expo-updates": "~0.27.4",
+    "nativewind": "^2.0.11",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.9",
+    "react-native-exit-app": "^2.0.0",
+    "react-native-paper": "^5.14.5",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-vector-icons": "^10.2.0",
+    "expo-crypto": "~14.0.2",
+    "expo-clipboard": "~7.0.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@types/jest": "^29.5.12",
+    "@types/react": "~18.3.12",
+    "@types/react-native-vector-icons": "^6.4.18",
+    "@types/react-test-renderer": "^18.3.0",
+    "jest": "^29.2.1",
+    "jest-expo": "~52.0.6",
+    "react-test-renderer": "18.3.1",
+    "tailwindcss": "^3.3.2",
+    "tsx": "^4.19.2",
+    "typescript": "^5.3.3"
+  },
+  "private": true
 }
