--- a/app.json
+++ b/app.json
@@ -1,57 +1,54 @@
 {
-    "expo": {
-        "name": "Draz",
-        "slug": "draz",
-        "version": "1.5.0",
-        "orientation": "portrait",
-        "icon": "./assets/images/draz.png",
-        "userInterfaceStyle": "automatic",
-        "newArchEnabled": false,
-        "backgroundColor": "#161920",
-        "ios": {
-            "supportsTablet": true
-        },
-        "android": {
-            "adaptiveIcon": {
-                "foregroundImage": "./assets/images/draz.png",
-                "backgroundColor": "#161920"
-            },
-            "permissions": [
-                /*"android.permission.READ_EXTERNAL_STORAGE",
-                "android.permission.WRITE_EXTERNAL_STORAGE",
-                "android.permission.INTERNET"*/
-            ],
-            "package": "com.zytech.draz"
-        },
-        "web": {
-            "bundler": "metro",
-            "output": "static",
-            "favicon": "./assets/images/draz.png"
-        },
-        "plugins": [
-            "expo-router",
-            "expo-sqlite",
-            [
-                "expo-splash-screen",
-                {
-                    "image": "./assets/images/draz.png",
-                    "resizeMode": "cover",
-                    "backgroundColor": "#161920"
-                }
-            ],
-            "expo-asset"
-        ],
-        "experiments": {
-            "typedRoutes": true
-        },
-        "extra": {
-            "router": {
-                "origin": false
-            },
-            "eas": {
-                "projectId": "4861cb14-09ad-4810-9edc-5dcce8bb6b6d"
-            }
-        },
-        "owner": "zy-god"
-    }
+  "expo": {
+    "name": "Draz",
+    "slug": "draz",
+    "version": "1.5.0",
+    "orientation": "portrait",
+    "icon": "./assets/images/draz.png",
+    "userInterfaceStyle": "automatic",
+    "newArchEnabled": false,
+    "backgroundColor": "#161920",
+    "ios": {
+      "supportsTablet": true
+    },
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/images/draz.png",
+        "backgroundColor": "#161920"
+      },
+      "permissions": [],
+      "package": "com.zytech.draz"
+    },
+    "web": {
+      "bundler": "metro",
+      "output": "static",
+      "favicon": "./assets/images/draz.png"
+    },
+    "plugins": [
+      "expo-router",
+      "expo-sqlite",
+      [
+        "expo-splash-screen",
+        {
+          "image": "./assets/images/draz.png",
+          "resizeMode": "cover",
+          "backgroundColor": "#161920"
+        }
+      ],
+      "expo-asset",
+      "expo-font"
+    ],
+    "experiments": {
+      "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "4861cb14-09ad-4810-9edc-5dcce8bb6b6d"
+      }
+    },
+    "owner": "zy-god"
+  }
 }
