--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "~14.0.4",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
-    "@shopify/flash-list": "^2.0.2",
+    "@shopify/flash-list": "1.7.3",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
-    "expo": "~52.0.46",
+    "expo": "~52.0.47",
     "expo-asset": "~11.0.3",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.4",
