--- a/package.json
+++ b/package.json
@@ -21,9 +21,15 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "@shopify/flash-list": "1.7.3",
+    "buffer": "^6.0.3",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "expo": "~52.0.47",
     "expo-asset": "~11.0.3",
     "expo-blur": "~14.0.3",
+    "expo-clipboard": "~7.0.1",
+    "expo-crypto": "~14.0.2",
+    "expo-device": "~7.0.3",
     "expo-document-picker": "~13.0.3",
     "expo-env": "^1.1.1",
     "expo-file-system": "~18.0.8",
@@ -43,12 +49,11 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-crypto": "~14.0.2",
-    "expo-clipboard": "~7.0.1"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-native-vector-icons": "^6.4.18",
